<resources>
    <string name="app_name">Dis_Jesuitas</string>
    <string name="jesuitas">Jesuitas</string>
    <string name="sacred_heart_center_in_logro_o">Sacred heart center in Logroño</string>
    <string name="duques_de_najera_18_26002_logro_o">Duques de Najera 18, 26002 Logroño</string>
    <string name="csc_jesuitasrioja_org">csc@jesuitasrioja.org</string>
    <string name="_941_22_17_00">941 22 17 00</string>
    <string name="like">like it</string>
</resources>